# extraction-pipeline

./: .gitignore  Notes.txt  convert_json_to_excel.py  extracted_schema.txt  main.py  pyproject.toml
app/: __init__.py  business_logic.py  config.py  converter.py  extractor.py  llm.py  pipeline.py  schemas.py
app/bidding_calendar_extraction/: README.md  agent.py  converter.py  models.py  run_bidding_calendar_extraction.py
app/financial_closure_extraction/: README.md  agent.py  converter.py  extractor.py  models.py  run_ctuil_extraction.py
app/langextract_revocation_extraction/: README.md  __init__.py  extractor.py  pdf_reader.py  run_pipeline.py
app/nct_extraction/: __main__.py  extractor.py  reporting.py  schemas.py  scope_extractor.py  seed_extractor.py  tbcb_extractor.py  tender_query.py  tender_tools.py
app/re_margin_extraction/: README.md  agent.py  converter.py  models.py  (+1 more)
nct_extraction/: README.md  __init__.py  __main__.py  extractor.py  main.py  reporting.py  schemas.py  scope_extractor.py  seed_extractor.py  tbcb_extractor.py  test_deep_audit.py  test_external_data.py  test_extract_no_llm.py  test_scan.py  to_excel.py
prompts/: system_prompt.md
scratch/: all_structures.txt  analyze_structures.py  context_output.txt  context_output_38th.txt  inspect_38th.py  inspect_38th_all.txt  inspect_context.py  inspect_excel.py  inspect_headers.py  inspect_keywords.py  inspect_pdf.py  inspect_pdf_v2.py  inspect_pdf_v3.py  nct_variant_audit.json  nct_variant_audit.md  nct_variant_audit.py  pdf_headers.txt  test_conversion.py  test_integration.py  test_naming.py  test_schema.py
shared/: llm.py  pdf_table_extractor.py
(+13 files in other folders)
