[project]
name = "extraction-pipeline"
version = "0.3.0"
description = "PDF extraction pipeline using Pydantic AI for structured output with multi-model support (Azure VM, Groq Cloud, Google Gemini)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=0.2.0",
    "pydantic-ai-slim[openai]>=0.2.0",
    "pydantic-ai-slim[groq]>=0.2.0",
    "pydantic-ai-slim[google]>=0.2.0",
    "camelot-py[base]>=0.11.0",
    "PyPDF2>=3.0.0",
    "opencv-python-headless>=4.0.0",
    "pdfplumber>=0.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "groq>=0.4.0",
    "httpx>=0.28.1",
]